1/15/2024 - 2/4/2024
Added:
 - td (table data cells) are parsed as paragraphs.
 - li (list items) are parsed as paragraphs.
 - ebread can be compiled with a custom version number.
 - Can now parse text in divs, spans, and titles.
 - -q/--quiet option: Disables verbose output.

Changed:
 - Now uses own xml parser rather than libxml2's.
 - Verbose output is now enabled by default.

Removed:
 - libxml2 dependency.
 - Useless verbose messages.