@@ -1,3 +1,8 @@
+struct xml_prop {
+	char* name;
+	char* value;
+};
+
 struct xml_tree_node {
 	char* name;
 	struct xml_tree_node* next;
@@ -5,7 +10,7 @@ struct xml_tree_node {
 	struct xml_tree_node* parent;
 	struct xml_tree_node* child;
 	struct xml_tree_node* traverse;
-	char* attributes;
+	struct xml_prop* props;
 	char* text;
 	char* content_ptr;
 };
@@ -13,5 +18,7 @@ struct xml_tree_node {
 int xml_strcmpnul(char* s1, char* s2);
 
 struct xml_tree_node* xml_build_tree(char* xml);
+
+char* xml_get_prop(struct xml_tree_node* node, char* propname);
 
 void xml_free_tree(struct xml_tree_node* head);
