@@ -1,7 +1,7 @@
-1/15/2024 - 2/4/2024
+1/15/2024 - 2/19/2024
 Added:
- - td (table data cells) are parsed as paragraphs.
- - li (list items) are parsed as paragraphs.
+ - td (table data cells) are parsed.
+ - li (list items) are parsed.
  - ebread can be compiled with a custom version number.
  - Can now parse text in divs, spans, and titles.
  - -q/--quiet option: Disables verbose output.
@@ -13,3 +13,9 @@ Changed:
 Removed:
  - libxml2 dependency.
  - Useless verbose messages.
+
+Fixes:
+ - Tag props are correctly parsed.
+ - Tag props are now checked for formatting errors.
+ - id props in an EPUB's root file manifest that have a space inbetween 'id' and
+   the equal sign are parsed correctly.
